--- a/_posts/2021-03-31-0329-0404.md
+++ b/_posts/2021-03-31-0329-0404.md
@@ -347,3 +347,83 @@ void deleteBoardComment(long boardNo);
 
 * 게시글을 삭제할 경우 BoardServiceImpl에서 CommentMapper에 접근하여 deleteBoardComment를 통해 게시글에 있는 모든 댓글을 삭제하도록 구현하였다.
 * 댓글을 입력, 삭제할 경우 CommentServiceImpl에서 BoardMapper에 접근하여 댓글 수 컬럼을 변경하였다.
+
+## 0401
+# 댓글 목록 조회 API
+*댓글 목록 조회 API는 게시글 목록 조회 API와 비슷하여 쉽게 구현하였다.*
+
+## 컨트롤러 - 서비스 - 매퍼
+```java
+// Controller
+/**
+* 게시글에 있는 댓글 목록 조회
+* @param criteria
+* @return
+*/
+@GetMapping("/lists")
+public BaseResponse getBoardCommentList(@ModelAttribute Criteria criteria) {
+    // 글번호 필수 체크
+    if (criteria.getBoardNo() == 0) {
+        throw new BaseException(BaseResponseCode.CODE_100, new String[]{"글번호"});
+    }
+
+    // 리턴 값의 순서를 보장하기 위해 LinkedHashMap으로 구현
+    Map<String, Object> data = new LinkedHashMap<>();
+
+    // boardNo로 게시글에 있는 댓글들을 Criteria로 페이징 처리하여 목록을 map 타입으로 반환
+    Map<String, Object> result = commentService.getBoardCommentList(criteria);
+
+    data.put("currentPageNo", criteria.getCurrentPageNo());
+    data.put("recordsPerPage", criteria.getRecordsPerPage());
+    data.put("totalCnt", result.get("totalCnt"));
+    data.put("list", result.get("list"));
+    return new BaseResponse(data);
+}
+
+// Service
+@Override
+public Map<String, Object> getBoardCommentList(Criteria criteria) {
+    Map<String, Object> result = new HashMap<>();
+
+    List<Comment> list = commentMapper.getBoardCommentList(criteria);
+    int totalCnt = commentMapper.getBoardCommentTotalCnt(criteria.getBoardNo());
+
+    result.put("list", list);
+    result.put("totalCnt", totalCnt);
+
+    return result;
+}
+
+// Mapper
+List<Comment> getBoardCommentList(Criteria criteria);
+
+int getBoardCommentTotalCnt(long boardNo);
+``` 
+
+## mybatis query
+```xml
+<!-- 게시글에 있는 댓글 목록 조회 -->
+<select id="getBoardCommentList" parameterType="Criteria" resultType="Comment">
+    SELECT
+        B.COMMENT_NO,
+        B.BOARD_NO,
+        A.MEMBER_NO,
+        A.MEMBER_NAME,
+        B.CONTENT,
+        B.REG_DATE
+    FROM MEMBER A INNER JOIN COMMENT B ON A.MEMBER_NO = B.MEMBER_NO
+    WHERE BOARD_NO = #{boardNo}
+    ORDER BY B.COMMENT_NO
+    LIMIT #{recordsPerPage} OFFSET #{startPage}
+</select>
+
+<!-- 게시글에 있는 댓글 개수 반환 -->
+<select id="getBoardCommentTotalCnt" parameterType="long" resultType="int">
+    SELECT COUNT(*)
+    FROM COMMENT
+    WHERE BOARD_NO = #{boardNo}
+</select>
+```
+
+* 게시글에 있는 댓글 개수를 반환하므로 boardNo로 조회하여 목록을 반환하는 것을 제외하면 게시글 목록 조회와 거의 같은 방식으로 구현하였다.
+* 다만 parameterType으로 페이징 처리를 하기 위해 Criteria 클래스를 주었는데, boardNo를 포함시키기 위해 Criteria 클래스에 boardNo를 넣는 것이 논리적으로 합당한가에 대한 의문이 들었다. 이에 대해서는 좀 더 생각해 볼 필요가 있는 것 같다.
