--- a/_posts/2021-03-31-0329-0404.md
+++ b/_posts/2021-03-31-0329-0404.md
@@ -427,3 +427,126 @@ int getBoardCommentTotalCnt(long boardNo);
 
 * 게시글에 있는 댓글 개수를 반환하므로 boardNo로 조회하여 목록을 반환하는 것을 제외하면 게시글 목록 조회와 거의 같은 방식으로 구현하였다.
 * 다만 parameterType으로 페이징 처리를 하기 위해 Criteria 클래스를 주었는데, boardNo를 포함시키기 위해 Criteria 클래스에 boardNo를 넣는 것이 논리적으로 합당한가에 대한 의문이 들었다. 이에 대해서는 좀 더 생각해 볼 필요가 있는 것 같다.
+
+## 0402
+# 좋아요 기능 API
+*좋아요 기능을 구현하기 위해서는 이전에 비해 고민해야할 부분이 조금 더 있었다. 가장 큰 고민거리는 좋아요를 클릭할 때마다 꺼지고 켜지고가 반환되어야 하고, 그 결과가 DB에 저장되어야 하는데 이를 어떻게 설계하느냐였다.*
+
+* 좋아요를 누를 때마다 DB에서 생성하고 삭제하는 방식 대신, 컬럼을 추가하여 확인하도록 구현하였다.
+* 컬럼은 boolean 형식으로 할 지, 0이나 1의 숫자 형식으로 할 지 고민하다가 결국 'Y', 'N'으로 여부를 확인하도록 정했다.
+
+## 컨트롤러 - 서비스 - 매퍼
+```java
+// Domain
+@Data
+public class Like {
+    private long likeNo;
+    private long boardNo;
+    private long memberNo;
+    private String likeYn;
+}
+
+// Controller
+/**
+* 좋아요 클릭 시 동작
+* @param like
+* @param request
+* @return
+*/
+@PostMapping("/update")
+public BaseResponse clickLike(@RequestBody Like like, HttpServletRequest request) {
+    // 글번호 필수 체크
+    if (like.getBoardNo() == 0) {
+        throw new BaseException(BaseResponseCode.CODE_100, new String[]{"글번호"});
+    }
+
+    // request에 저장한 id를 받아와서 Comment 객체에 값을 넣어준다.
+    long memberNo = getMemberNo(request);
+    like.setMemberNo(memberNo);
+
+    Map<String, Object> data = likeService.clickLike(like);
+
+    return new BaseResponse(data);
+}
+
+// Service
+public Map<String, Object> clickLike(Like like) {
+    Map<String, Object> result = new HashMap<>();
+
+    // 회원 번호와 게시글 번호로 좋아요 DB를 조회하여 Like 객체 반환
+    Like memberLike = likeMapper.getLike(like);
+
+    // Like 객체가 없을 경우, Like 객체 추가한 뒤 반환
+    if (ObjectUtils.isEmpty(memberLike)) {
+        like.setLikeYn("Y");
+        likeMapper.insertLike(like);
+        result.put("likeYn", like.getLikeYn());
+        return result;
+    }
+
+    // Like 객체가 있을 경우, likeYn 필드를 "Y"는 "N"으로 "N"은 "Y"로 하여 업데이트
+    if (memberLike.getLikeYn().equals("Y")) {
+        like.setLikeYn("N");
+    } else {
+        like.setLikeYn("Y");
+    }
+
+    // likeNo로 조회하기 위해, 가져온 Like 객체의 likeNo 값을 대입
+    like.setLikeNo(memberLike.getLikeNo());
+    likeMapper.updateLike(like);
+    result.put("likeYn", like.getLikeYn());
+
+    return result;
+}
+
+// Mapper
+public interface LikeMapper {
+    Like getLike(Like like);
+
+    void insertLike(Like like);
+
+    void updateLike(Like like);
+}
+```
+
+## mybatis query
+```xml
+<!-- 좋아요 조회 -->
+<select id="getLike" parameterType="Like" resultType="Like">
+    SELECT
+        LIKE_NO,
+        BOARD_NO,
+        MEMBER_NO,
+        LIKE_YN
+    FROM LIKE_TABLE
+    WHERE BOARD_NO = #{boardNo} AND MEMBER_NO = #{memberNo}
+</select>
+
+<!-- 좋아요 추가 -->
+<insert id="insertLike" parameterType="Like">
+    INSERT INTO LIKE_TABLE
+    (
+        BOARD_NO,
+        MEMBER_NO,
+        LIKE_YN
+    )
+    VALUES
+    (
+    #{boardNo},
+    #{memberNo},
+    #{likeYn}
+    )
+</insert>
+
+<!-- 좋아요 업데이트 -->
+<update id="updateLike" parameterType="Like">
+    UPDATE LIKE_TABLE
+    SET
+        LIKE_YN = #{likeYn}
+    WHERE LIKE_NO = #{likeNo}
+</update>
+```
+
+* 파라미터로 받은 회원 번호와 게시글 번호로 해당하는 객체가 있는지 DB를 조회하여 반환하였다.
+* 이 객체가 null이라면 DB에 새로 생성하는 쿼리를 실행하였고, 그렇지 않다면 likeYn 값만 바꾸어 update 쿼리를 실행하였다.
+* 업데이트 시, likeNo로 변경할 로우를 결정하기 위해서, memberLike에 저장해두었던 likeNo를 세팅하였다.
