--- a/_posts/2021-03-31-0329-0404.md
+++ b/_posts/2021-03-31-0329-0404.md
@@ -550,3 +550,149 @@ public interface LikeMapper {
 * 파라미터로 받은 회원 번호와 게시글 번호로 해당하는 객체가 있는지 DB를 조회하여 반환하였다.
 * 이 객체가 null이라면 DB에 새로 생성하는 쿼리를 실행하였고, 그렇지 않다면 likeYn 값만 바꾸어 update 쿼리를 실행하였다.
 * 업데이트 시, likeNo로 변경할 로우를 결정하기 위해서, memberLike에 저장해두었던 likeNo를 세팅하였다.
+
+## 0403
+# 좋아요 API - 추가 사항
+*작성한 좋아요 API에서 수정 및 추가해야 할 기능 몇 가지가 있었다.*
+
+* 좋아요 변경 여부에 맞게 게시글 좋아요 수 동기화
+* 게시글 삭제 시 좋아요 데이터 정보도 삭제
+* 게시글 세부 조회 시 해당 회원의 게시글에 대한 좋아요 여부 반환
+
+## 좋아요 변경 여부에 맞게 게시글 좋아요 수 동기화
+*게시글 목록에서 회원들이 좋아요를 클릭한 횟수를 보여주기 위해서 회원이 게시글에 좋아요를 클릭했을 때, boardMapper을 호출하여 좋아요 수를 변경하는 로직을 추가하였다.*
+```java
+// LikeServiceImpl
+@Override
+public Map<String, Object> clickLike(Like like) {
+    Map<String, Object> result = new HashMap<>();
+
+    // 회원 번호와 게시글 번호로 좋아요 DB를 조회하여 Like 객체 반환
+    Like memberLike = likeMapper.getLike(like);
+
+    // Like 객체가 없을 경우, Like 객체 추가한 뒤 반환
+    if (ObjectUtils.isEmpty(memberLike)) {
+        like.setLikeYn("Y");
+        likeMapper.insertLike(like);
+        boardMapper.updateLikeCnt(like.getBoardNo(), 1);
+        result.put("likeYn", like.getLikeYn());
+        return result;
+    }
+
+    // likeNo로 조회하기 위해, 가져온 Like 객체의 likeNo 값을 대입
+    like.setLikeNo(memberLike.getLikeNo());
+
+    // Like 객체가 있을 경우, likeYn 필드를 "Y"는 "N"으로 "N"은 "Y"로 하여 업데이트
+    if (memberLike.getLikeYn().equals("Y")) {
+        like.setLikeYn("N");
+        likeMapper.updateLike(like);
+        boardMapper.updateLikeCnt(like.getBoardNo(), -1);
+    } else {
+        like.setLikeYn("Y");
+        likeMapper.updateLike(like);
+        boardMapper.updateLikeCnt(like.getBoardNo(), 1);
+    }
+
+    result.put("likeYn", like.getLikeYn());
+
+    return result;
+}
+
+// boardMapper
+void updateLikeCnt(long boardNo, int amount);
+```
+
+## mybatis query
+```xml
+<!-- 좋아요 여부 추가, 변경 시 likeCnt 변경 -->
+<update id="updateLikeCnt">
+    UPDATE BOARD
+    SET LIKE_CNT = LIKE_CNT + #{amount}
+    WHERE BOARD_NO = #{boardNo}
+</update>
+```
+
+* 게시글 번호와 증가량을 매개변수로 받는 mapper를 작성하여 like가 증가할 때는 1을 인자로 보내고, 감소할 때는 -1을 인자로 보내어 로직을 구현했다.
+
+## 게시글 삭제 시 좋아요 데이터 정보도 삭제
+
+```java
+// boardServiceImpl
+@Override
+public void deleteBoard(long boardNo) {
+    boardMapper.deleteBoard(boardNo);
+    commentMapper.deleteBoardComment(boardNo);
+    likeMapper.deleteBoardLike(boardNo);
+}
+
+// likeMapper
+void deleteBoardLike(long boardNo);
+```
+
+## mybatis query
+```xml
+<!-- 게시글에 있는 모든 좋아요 삭제 -->
+<delete id="deleteBoardLike" parameterType="long">
+    DELETE FROM LIKE_TABLE
+    WHERE BOARD_NO = #{boardNo}
+</delete>
+```
+
+* 게시글을 삭제할 때 likeMapper에 boardNo를 인자로 보내어 해당하는 게시글에 있는 좋아요 정보를 모두 삭제했다.
+
+## 게시글 세부 조회 시 해당 회원의 게시글에 대한 좋아요 여부 반환
+*프론트 측에서 게시글 세부 조회를 하면 기존에 해당 게시글에 좋아요를 누른 회원은 좋아요 표시가 된 채로 게시글이 보여져야 하기 때문에 좋아요 여부를 함께 반환하도록 코드를 수정했다.*
+
+```java
+// Controller
+/**
+* 게시글 세부 조회
+* @param boardNo
+* @param request
+* @return
+*/
+@GetMapping("/{boardNo}")
+public BaseResponse getBoard(@PathVariable("boardNo") long boardNo, HttpServletRequest request) {
+
+    long memberNo = getMemberNo(request);
+    Board board = boardService.getBoard(boardNo);
+    String likeYn = boardService.getBoardLikeYn(boardNo, memberNo);
+
+    Map<String, Object> info = new LinkedHashMap<>();
+    info.put("boardNo", board.getBoardNo());
+    info.put("memberNo", board.getMemberNo());
+    info.put("memberName", board.getMemberName());
+    info.put("title", board.getTitle());
+    info.put("content", board.getContent());
+    info.put("commentCnt", board.getCommentCnt());
+    info.put("likeCnt", board.getLikeCnt());
+    info.put("likeYn", likeYn);
+    info.put("regDate", board.getRegDate());
+
+    Map<String, Object> data = new HashMap<>();
+    data.put("info", info);
+
+    return new BaseResponse(data);
+}
+
+// boardServiceImpl
+@Override
+public String getBoardLikeYn(long boardNo, long memberNo) {
+    return likeMapper.getLikeYn(boardNo, memberNo);
+}
+
+// likeMapper
+String getLikeYn(long boardNo, long memberNo);
+```
+
+## mybatis query
+```xml
+<!-- 해당 게시글에 대한 회원의 좋아요 여부 반환 -->
+<select id="getLikeYn" resultType="String">
+    SELECT LIKE_YN
+    FROM LIKE_TABLE
+    WHERE BOARD_NO = #{boardNo} AND MEMBER_NO = #{memberNo}
+</select>
+```
+* likeYn을 추가해서 반환하기 위해 Board 객체로 받아온 것을 새로운 Map을 만들어서 넣었다.
+* 게시글 번호와 회원 번호를 통해 likeYn 여부를 조회하여 반환했다.
