--- a/_posts/2021-03-31-0329-0404.md
+++ b/_posts/2021-03-31-0329-0404.md
@@ -696,3 +696,10 @@ String getLikeYn(long boardNo, long memberNo);
 ```
 * likeYn을 추가해서 반환하기 위해 Board 객체로 받아온 것을 새로운 Map을 만들어서 넣었다.
 * 게시글 번호와 회원 번호를 통해 likeYn 여부를 조회하여 반환했다.
+
+## 0404
+# SimpleBoard API 서버를 구현하며...
+이번 프로젝트를 진행하면서 API 서버 구현이 마무리 되었다. 원하는 결과값을 돌려받는 것을 확인하였고, 처음부터 끝까지 내가 혼자 구현하며 많은 것을 배웠다.  
+작은 프로젝트에도 생각보다 고민할 거리가 정말 많다는 것을 깨달았고, 그것들을 구현하기 위해서는 많은 시간이 소요된다는 것을 몸소 체험했다.  
+의미있는 로그를 출력하고 쓸모 없는 dependency를 추가하지 않기 위해서도 노력을 기울이는 등 많이 부족하지만 최대한 실무라고 생각하고 정성을 다해서 프로젝트를 진행하였다.  
+아직 프론트엔드 부분은 제대로 시작하지도 않았고 갈 길이 멀지만, 두 서버를 연결하는 것을 시작으로 이번 프로젝트를 잘 마무리 지어서 다음 프로젝트로 나아갈 준비를 해야겠다.
