--- a/_posts/2021-04-07-0405-0411.md
+++ b/_posts/2021-04-07-0405-0411.md
@@ -30,3 +30,97 @@ public void addCorsMappings(CorsRegistry registry) {
             .allowedOrigins("http://localhost:3000");
 }
 ```
+
+## 0406
+# register 함수를 실행하여 api 통신 테스트
+*구조화를 시키고 제대로 프론트엔드 개발에 들어가기 전에 api를 호출하였을 때 제대로 데이터가 응답되는지 테스트하기 위해 기본적인 회원가입 api를 테스트하였다.*
+
+```vue
+<!-- SignupFrom.vue -->
+<template>
+  <div class="main_loginBox">
+    <input
+      type="text"
+      class="login_id"
+      placeholder="아이디"
+      v-model="member.memberId"
+    />
+    <input
+      type="text"
+      class="login_name"
+      placeholder="이름"
+      v-model="member.memberName"
+    />
+    <input
+      type="password"
+      class="login_pw"
+      placeholder="비밀번호"
+      v-model="member.password"
+    />
+    <input type="password" class="login_pw" placeholder="비밀번호 확인" />
+    <button class="btn_signup" @click="signupMethod">회원가입</button>
+  </div>
+</template>
+
+<script>
+export default {
+  data() {
+    return {
+      member: {
+        memberId: "",
+        memberName: "",
+        password: ""
+      }
+    };
+  },
+  methods: {
+    async signupMethod() {
+      const result = await this.$store.dispatch("register", this.member);
+
+      console.log(result);
+    }
+  }
+};
+</script>
+
+<style scoped src="../../assets/css/member/form.css"></style>
+```
+* member 객체의 속성을 memberId, memberName, password에 매치시켜서 저장하여 회원가입 버튼 클릭 시 store에 있는 register 메소드를 실행시키도록 하였다.
+
+```javascript
+// member-module.js
+/* eslint-disable no-unused-vars */
+import memberService from "../service/memberService";
+
+export const member = {
+  state: {},
+  actions: {
+    async register({ commit }, member) {
+      try {
+        const result = await memberService.register(member);
+        console.log(result);
+      } catch (error) {
+        console.log(error.response);
+      }
+    }
+  }
+};
+```
+* axios는 비동기 통신이므로 actions에 선언하여 try catch문으로 처리하였다.
+* `{ commit }`을 작성하고 사용하지 않는 경우에는 에러가 발생하는 데, 에러를 발생시키지 않기 위해 2번 째 줄에 주석을 작성하였다.
+* `console.log(error.response);`를 통해서 에러 시에도 정상적으로 데이터가 반환되도록 하였다.
+
+```javascript
+// memberService.js
+import axios from "axios";
+
+const register = member => {
+  console.log(member);
+  const url = "http://localhost:8080/members/new";
+  return axios.post(url, member);
+};
+
+export default { register };
+```
+* api를 호출하는 로직은 모두 한 곳에 모아두기 위해서 service 디렉토리 밑에 작성하였다.
+* 다른 곳에서 메소드를 호출하기 위해 `export default` 처리하였다.
