--- a/_posts/2021-04-07-0405-0411.md
+++ b/_posts/2021-04-07-0405-0411.md
@@ -124,3 +124,55 @@ export default { register };
 ```
 * api를 호출하는 로직은 모두 한 곳에 모아두기 위해서 service 디렉토리 밑에 작성하였다.
 * 다른 곳에서 메소드를 호출하기 위해 `export default` 처리하였다.
+
+## 0407
+# mongoDB 소개
+## Document Database
+* 문서 지향 데이터베이스이다.
+```json
+// field: value
+{
+	name: "sue",
+	age: 26,
+	status: "A",
+	groups: [ "news", "sports" ]
+}
+```
+
+### 장점
+* 문서는 많은 프로그래밍 언어 (ex 자바스크립트)에서 기본 데이터 타입으로 제공한다.
+* 내장된 문서(json 안에 json)와 배열은 조인의 필요성을 줄인다.
+* polymorphism 구현에 유리하도록 동적 스키마를 제공한다.
+
+### 컬렉션/뷰/On-Demand Materialized Views
+* 몽고DB는 문서를 컬렉션에 저장한다.
+* 컬렉션은 관계 DB의 테이블과 같은 역할을 한다.
+
+* 컬렉션에서 몽고DB 지원:
+	* 읽기 전용 뷰
+	* 실체화된 뷰
+
+## 몽고DB 주요 특징
+### 고성능
+* 임베디드 데이터 모델을 지원해서 입출력에 관한 부담을 줄인다.
+* 인덱스는 빠른 속도의 쿼리를 지원한다.
+
+### 풍부한 질의어
+* 몽고DB는 읽고 쓰기 연산을 지원하기 위해 풍부한 질의어를 제공한다.
+	* 데이터 그룹
+	* 텍스트 검색, 2차원 3차원 좌표 쿼리
+
+### 가용성
+* replica set이라는 복제 기능을 제공한다. 
+	* 자동 복구
+	* 데이터 중복성
+* replica set은 몽고DB 서버의 그룹으로 같은 데이터를 유지하고, 중복성을 제공하여 데이터 가용성을 높인다.
+
+### 수평적 확장성
+* 몽고DB는 핵심 기능 중 하나로 수평적 확장성을 제공한다.
+	* Sharding
+
+### 다수의 Storage Engines을 제공
+* WiredTiger Storage Engine
+* In-Memory Storage Engine
+* 추가적으로, 몽고DB는 써드파티 storage engines을 허용하는 API를 제공한다.
