--- a/_posts/2021-04-07-0405-0411.md
+++ b/_posts/2021-04-07-0405-0411.md
@@ -176,3 +176,43 @@ export default { register };
 * WiredTiger Storage Engine
 * In-Memory Storage Engine
 * 추가적으로, 몽고DB는 써드파티 storage engines을 허용하는 API를 제공한다.
+
+## 0408
+## 데이터베이스와 컬렉션
+*몽고DB는 데이터 레코드를 문서 형태(물리적으로는 BSON 문서)로 저장한다.*
+
+* 데이터 베이스는 하나 이상의 컬렉션을 저장한다.
+* 컬렉션은 문서들의 집합이다.
+* 데이터베이스를 사용하기 위해서 선택하려면 `use myDB` 명령어를 사용한다.
+
+### create a Database
+* 만약 데이터베이스가 존재하지 않으면, 처음으로 데이터베이스에 데이터를 저장할 때 몽고DB가 데이터 베이스를 만들어준다.
+
+### Collections
+* 몽고DB는 문서를 컬렉션에 저장한다.
+* 컬렉션은 관계DB의 테이블과 비슷하다.
+* 컬렉션은 스키마 형태를 강제하지는 않지만, 일반적으로는 비슷하다.
+
+### create a Collection
+* 컬렉션이 없다면, 처음으로 컬렉션에 데이터를 저장할 때 몽고DB가 컬렉션을 만들어준다.
+
+## Documents
+* 데이터 모델로 문서를 사용한다. 
+* 필드와 값 쌍으로 문서를 구성한다.
+* 다른 문서의 같은 일반 필드에서 데이터 타입이 달라도 허용한다.
+
+### 필드 이름
+* _id는 기본 키로 사용된다.
+* 필드 이름은 null 형태를 포함할 수 없다.
+
+## RDBMS vs MongoDB
+Database     - Database  
+Table            - Collection  
+Tuple/Row   - Document  
+column         - Field  
+Table join     - Embedded Documents  
+Primary Key  - Primary Key (Default key _id)
+
+### Database Server and client
+**Server** mysqld/Oracle  - mongod  
+**client**   mysql/sqlplus    - mongo
