--- a/_posts/2021-04-07-0405-0411.md
+++ b/_posts/2021-04-07-0405-0411.md
@@ -216,3 +216,42 @@ Primary Key  - Primary Key (Default key _id)
 ### Database Server and client
 **Server** mysqld/Oracle  - mongod  
 **client**   mysql/sqlplus    - mongo
+
+## 0409
+# vee-validate
+VeeValidate는 Vue.js를 위해 특별히 구축 된 유효성 검사 프레임 워크로, 함수 기반 API 및 Vue 구성 요소의 모음이다.
+
+## Validation Provider
+* 먼저 필드에 대한 유효성 검사기 역할을 하는 구성 요소로 ValidationProvider를 컴포넌트 등록해야 한다.
+
+```javascript
+import { ValidationProvider } from 'vee-validate';
+
+export default {
+  components: {
+    ValidationProvider
+  }
+};
+```
+* 그런 다음 구성 요소 템플릿에서 사용할 수 있으며, 일반적으로 input 태그를 래핑해서 사용한다.
+
+```html
+<ValidationProvider v-slot="{ errors }">
+  <input v-model="value" type="text">
+	<span>{{ errors[0] }}</span>
+</ValidationProvider>
+```
+* 이제 에러 메세지를 화면에 보여줄 수 있다.
+
+## 규칙 추가
+VeeValidate는 번들 크기를 최대한 작게 유지하기 위해 기본적으로 유효성 검사 규칙과 함께 설치되지 않는다.
+함수 API 중 첫 번째는 extend 함수이다.
+```javascript
+import { extend } from 'vee-validate';
+
+extend('positive', value => {
+  return value >= 0;
+});
+```
+* extend 함수는 해당 규칙에 사용할 규칙 이름과 유효성 검사기 함수를 받는다.
+* `<ValidationProvider rules="positive" v-slot="{ errors }">`와 같은 형식으로 새로 정의한 규칙을 사용할 수 있다.
