--- a/_posts/2021-02-09-0208-0214.md
+++ b/_posts/2021-02-09-0208-0214.md
@@ -48,7 +48,7 @@ category: TIL
 
         <ul class="paging">
             <li v-for="index in endPageIndex-startPageIndex + 1" :key="index">
-                <button type="button" :class="{on: ((startPageIndex + index - 1) == currentPage)}" title="현재페이지로 이동" @click="changePage(index)">{{ startPageIndex + index - 1 }}</button>
+                <button type="button" :class="{on: ((startPageIndex + index - 1) == currentPage)}" title="현재페이지로 이동" @click="changePage(index)">[mustache] startPageIndex + index - 1 [mustache]</button>
             </li>
         </ul>
 
