--- a/_posts/2021-03-02-0301-0307.md
+++ b/_posts/2021-03-02-0301-0307.md
@@ -19,12 +19,12 @@ category: TIL
 
 ```html
 <template>
-	<p>Hello {{ message }}</p>
+	<p>Hello [mustache] message [mustache]</p>
 </template>
 ```
 
 ### 데이터 바인딩
-*HTML 화면 요소를 뷰 인스턴스의 데이터와 연결하는 것을 의미. 주요 문법으로는 {{ }}문법과 v-bind 속성이 있다.*
+*HTML 화면 요소를 뷰 인스턴스의 데이터와 연결하는 것을 의미. 주요 문법으로는 mustache 문법과 v-bind 속성이 있다.*
 
 #### 콧수염 괄호
 * 뷰 인스턴스의 데이터를 HTML 태그에 연결하는 가장 기본적인 텍스트 삽입 방식
@@ -256,7 +256,7 @@ state: {
 }
 
 // 접근
-{{ this.$store.state.message }}
+[mustache] this.$store.state.message [mustache]
 ```
 
 ## getters
@@ -273,7 +273,7 @@ getters: {
 }
 
 // 접근
-{{ this.$store.getters.getNumber }}
+[mustache] this.$store.getters.getNumber [mustache]
 ```
 * 여기까지만 보면 그냥 state에 접근하는 것과 큰 이점을 느낄 수 없는데, 추후에 배우는 헬퍼 함수를 이용하면 간단하게 쓸 수 있다.
 
