--- a/_posts/2021-04-07-0405-0411.md
+++ b/_posts/2021-04-07-0405-0411.md
@@ -255,3 +255,46 @@ extend('positive', value => {
 ```
 * extend 함수는 해당 규칙에 사용할 규칙 이름과 유효성 검사기 함수를 받는다.
 * `<ValidationProvider rules="positive" v-slot="{ errors }">`와 같은 형식으로 새로 정의한 규칙을 사용할 수 있다.
+
+## 0410
+## 메시지
+* VeeValidate는 필드에 대한 오류 메시지를 생성한다.
+* 유효성 검사 함수 자체에서 문자열을 반환하여 변경할 수 있다.
+```javascript
+extend('odd', {
+  validate: value => {
+    return value % 2 !== 0;
+  },
+  message: 'This field must be an odd number'
+});
+```
+이렇게 하면 validator 기능이 훨씬 더 명확해진다.
+
+### 필드 이름 자리 표시
+에러 메시지에 필드 이름을 포함하여 출력하고 싶은 경우
+```javascript
+extend('positive', value => {
+  if (value >= 0) {
+    return true;
+  }
+
+  return 'The {_field_} field must be a positive number';
+});
+```
+와 같이 {_field_}를 메시지 안에 넣으면 ValidationProvider 태그의 name 속성에 해당하는 문자가 메세지에 입력된다.
+
+## 규칙 가져오기
+유효성 검사 규칙은 vee-validate/dist/rules를 import 하여 사용할 수 있다.
+```javascript
+import { extend } from 'vee-validate';
+import { required, email } from 'vee-validate/dist/rules';
+
+// No message specified.
+extend('email', email);
+
+// Override the default message.
+extend('required', {
+  ...required,
+  message: 'This field is required'
+});
+```
