--- a/_posts/2021-04-07-0405-0411.md
+++ b/_posts/2021-04-07-0405-0411.md
@@ -298,3 +298,158 @@ extend('required', {
   message: 'This field is required'
 });
 ```
+
+## 0411
+## ValidationObserver
+*폼 전체의 유효성을 검사하는 것으로, 폼 안에 있는 필드의 유효성 검사 상태를 관찰한다.*
+
+* ValidationObserver는 에러와 유효 플래그를 집계하여 모든 필드들의 유효 검사 상태를 나타낸다.
+
+### 사용법
+제출하기 전에 form의 유효성을 검사하는 것은 필수이다.
+ValidationObserver는 handleSubmit 함수를 제공하여 유효한 form을 제출한 후에만 핸들러를 실행한다.
+아래는 모든 유효성 검사를 적용한 코드이다.
+```vue
+<template>
+  <div class="main_loginBox">
+    <ValidationObserver v-slot="{ handleSubmit }">
+      <form @submit.prevent="handleSubmit(signupMethod)">
+        <ValidationProvider
+          name="아이디"
+          rules="required|email"
+          v-slot="{ errors }"
+        >
+          <input
+            type="text"
+            class="login_id"
+            placeholder="아이디"
+            v-model="member.memberId"
+          />
+          <span>{{ errors[0] }}</span>
+        </ValidationProvider>
+        <ValidationProvider name="이름" rules="required" v-slot="{ errors }">
+          <input
+            type="text"
+            class="login_name"
+            placeholder="이름"
+            v-model="member.memberName"
+          />
+          <span>{{ errors[0] }}</span>
+        </ValidationProvider>
+        <ValidationProvider
+          name="비밀번호"
+          vid="password"
+          rules="required|checkSpace|regex|min:10|max:32"
+          v-slot="{ errors }"
+        >
+          <input
+            type="password"
+            class="login_pw"
+            placeholder="비밀번호"
+            v-model="member.password"
+          />
+          <span>{{ errors[0] }}</span>
+        </ValidationProvider>
+        <ValidationProvider
+          name="비밀번호 확인"
+          rules="required|confirmed:password"
+          v-slot="{ errors }"
+        >
+          <input
+            type="password"
+            class="login_pw"
+            placeholder="비밀번호 확인"
+            v-model="reEnterPassword"
+            @keyup.enter="signupMethod"
+          />
+          <span>{{ errors[0] }}</span>
+        </ValidationProvider>
+        <button type="submit" class="btn_signup">회원가입</button>
+      </form>
+    </ValidationObserver>
+  </div>
+</template>
+
+<script>
+import { mapActions } from "vuex";
+import { extend, ValidationProvider, ValidationObserver } from "vee-validate";
+import { required, email, min, max, confirmed } from "vee-validate/dist/rules";
+
+extend("required", {
+  ...required,
+  message: "{_field_}은(는) 필수 입력 사항입니다."
+});
+
+extend("email", {
+  ...email,
+  message: "{_field_}은(는) 이메일 형식으로 작성해야 합니다."
+});
+
+extend("checkSpace", {
+  validate: value => {
+    if (value.search(/\s/) === -1) {
+      return true;
+    }
+  },
+  message: "공백은 입력이 불가능합니다."
+});
+
+extend("regex", {
+  validate: value => {
+    if (
+      // 정규 표현식을 만족한다면 true
+      /^(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]*$/.test(
+        value
+      )
+    ) {
+      return true;
+    }
+  },
+  message: "영문과 숫자와 특수문자를 최소 1자 이상 입력해주세요."
+});
+
+extend("min", {
+  ...min,
+  message: "{_field_}은(는) 최소 10자 이상 32자 이하로 입력해주세요."
+});
+
+extend("max", {
+  ...max,
+  message: "{_field_}은(는) 최소 10자 이상 32자 이하로 입력해주세요."
+});
+
+extend("confirmed", {
+  ...confirmed,
+  message: "비밀번호가 일치하지 않습니다."
+});
+
+export default {
+  components: {
+    ValidationProvider,
+    ValidationObserver,
+  },
+  data() {
+    return {
+      member: {
+        memberId: "",
+        memberName: "",
+        password: ""
+      },
+      reEnterPassword: "",
+    };
+  },
+  methods: {
+    ...mapActions(["register"]),
+    async signupMethod() {
+      const result = await this.register(this.member);
+
+      console.log(result);
+    }
+  }
+};
+</script>
+
+<style scoped src="../../assets/css/member/form.css"></style>
+```
+* ValidationProvider를 사용해  v-model에 연결된 값의 유효성을 검사한다.
+* ValidationObserver를 사용하기 위해 ValidationProvider를 form 태그로 감싸서 handleSubmit 메소드로 submit시 유효성을 검사해서 유효하지 않다면 api 호출을 할 수 없도록 막았다.
