--- a/_posts/2021-04-14-0412-0418.md
+++ b/_posts/2021-04-14-0412-0418.md
@@ -71,3 +71,6 @@ public void addCorsMappings(CorsRegistry registry) {
 ```
 * 백엔드는 스프링 프레임워크에서 구현하였는데, `WebMvcConfigurer`를 구현한 클래스에서 `addCorsMappings`를 오버라이딩 해서 Cors를 설정하고, `allowCredentials(true)`를 추가해주어야 쿠키가 정상적으로 작동한다.
 * 주의할 점은 allowedOrigins()에 와일드 카드를 넣게 되면 에러가 발생하게 된다.
+
+## 0414 ~ 0418
+중간고사 준비 기간
