--- a/_posts/2021-04-21-0419-0425.md
+++ b/_posts/2021-04-21-0419-0425.md
@@ -5,3 +5,97 @@ category: TIL
 ---
 ## 0419 ~ 0423
 중간고사 기간
+
+## 0424
+중간고사를 마무리 하고 다시 프로젝트를 이어서 진행하였다. api를 사용하는 영역을 모듈화 하고 인터셉터로 처리하였다.
+
+### 인터셉터
+
+```javascript
+// interceptors.js
+import store from "@/store/index";
+
+export function setInterceptors(axiosService) {
+  axiosService.interceptors.request.use(
+    function(config) {
+      // 요청을 보내기 전에 어떤 처리를 할 수 있다.
+      config.headers.Authorization = `Bearer ${store.state.member.token}`;
+      console.log(config);
+      return config;
+    },
+    function(error) {
+      // 요청이 잘못되었을 때, 에러가 컴포넌트 단으로 오기 전에 어떤 처리를 할 수 있다.
+      return Promise.reject(error);
+    }
+  );
+
+  axiosService.interceptors.response.use(
+    function(response) {
+      // 요청을 보내고 나서 응답을 받기 전에 어떤 처리를 할 수 있다.
+      console.log(response);
+      return response;
+    },
+    function(error) {
+      // 응답이 에러인 경우 미리 처리할 수 있다.
+      return Promise.reject(error);
+    }
+  );
+
+  return axiosService;
+}
+```
+* 인터셉터를 이용하면 HTTP 요청과 응답을 컴포넌트 단에서 처리하기 전에 추가 로직을 넣을 수 있다.
+* 요청하기 전에 헤더의 권한에 스토어에 저장된 토큰 값을 설정하였다.
+* 요청과 응답 모두 결과를 확인하기 위해 console.log로 찍어보았다.
+
+### 모듈화
+
+```javascript
+// index.js
+import axios from "axios";
+import { setInterceptors } from "./common/interceptors";
+
+function createAxiosService() {
+  return axios.create({
+    baseURL: process.env.VUE_APP_API_URL
+  });
+}
+
+function createAxiosServiceWithAuth() {
+  const axiosService = axios.create({
+    baseURL: process.env.VUE_APP_API_URL
+  });
+
+  return setInterceptors(axiosService);
+}
+
+export const axiosService = createAxiosService();
+export const axiosServiceWithAuth = createAxiosServiceWithAuth();
+```
+* 모듈화를 하기 위해 공통으로 설정할 index.js를 작성하였다.
+* axiosService는 기본 api 호출을 위한 것이고, axiosServiceWithAuth는 인터셉터를 거쳐서 토큰을 권한에 설정하여 로그인이 필요한 api를 호출하기 위해 구분한 것이다.
+
+```javascript
+// member.js
+import { axiosService } from "./index";
+
+const register = data => {
+  return axiosService.post("members/new", data);
+};
+
+const login = data => {
+  return axiosService.post("members/login", data, { withCredentials: true });
+};
+
+export default { register, login };
+
+// board.js
+import { axiosServiceWithAuth } from "./index";
+
+const getBoardList = data => {
+  return axiosServiceWithAuth.get("boards/lists", data);
+};
+
+export default { getBoardList };
+```
+* 위와 같이 index.js만 import하여 코드가 훨씬 간결해지고 깔끔해졌다.
