--- a/_posts/2021-04-21-0419-0425.md
+++ b/_posts/2021-04-21-0419-0425.md
@@ -99,3 +99,142 @@ const getBoardList = data => {
 export default { getBoardList };
 ```
 * 위와 같이 index.js만 import하여 코드가 훨씬 간결해지고 깔끔해졌다.
+
+## 0425
+# 로그인, 로그아웃
+vuex만 사용하면 새로고침 시 저장된 state가 초기화 되기 때문에 쿠키를 사용해서 기능을 구현하였다.
+
+```javascript
+// utils/cookies.js
+const getAuthFromCookie = () => {
+  return document.cookie.replace(
+    /(?:(?:^|.*;\s*)jwt\s*=\s*([^;]*).*$)|^.*$/,
+    "$1"
+  );
+};
+
+const getMemberNameFromCookie = () => {
+  return document.cookie.replace(
+    /(?:(?:^|.*;\s*)memberName\s*=\s*([^;]*).*$)|^.*$/,
+    "$1"
+  );
+};
+
+function deleteCookie(value) {
+  document.cookie = `${value}=; expires=Thu, 01 Jan 1970 00:00:01 GMT;`;
+}
+
+export { getAuthFromCookie, getMemberNameFromCookie, deleteCookie };
+```
+* utils에 쿠키와 관련된 함수를 작성하였다.
+* get 관련 함수는 백엔드 서버단에서 생성해준 쿠키를 반환하는 함수이다.
+* deleteCookie는 값을 매개변수로 받아서 해당하는 쿠키를 삭제한다.
+
+```javascript
+// store/module/member.js
+import memberService from "@/api/member";
+import {
+  getAuthFromCookie,
+  getMemberNameFromCookie,
+  deleteCookie
+} from "@/utils/cookies";
+
+export const member = {
+  state: {
+    token: getAuthFromCookie() || "",
+    memberName: getMemberNameFromCookie() || ""
+  },
+  getters: {
+    isLogin(state) {
+      return state.memberName !== "";
+    }
+  },
+  actions: {
+    async register({ commit }, member) {
+      const result = await memberService.register(member);
+      console.log(result);
+    },
+    async login({ commit }, member) {
+      const result = await memberService.login(member);
+      commit("setToken", getAuthFromCookie());
+      commit("setMemberName", getMemberNameFromCookie());
+      return result;
+    }
+  },
+  mutations: {
+    setToken(state, token) {
+      state.token = token;
+    },
+    setMemberName(state, memberName) {
+      state.memberName = memberName;
+    },
+    logout(state) {
+      (state.token = ""), (state.memberName = "");
+      deleteCookie("jwt");
+      deleteCookie("memberName");
+    }
+  }
+};
+```
+
+* 회원과 관련된 store이다.
+* 로그인 시 login api를 호출하여 백엔드 서버 단에서 쿠키에 토큰 값과 회원 이름을 저장해준다.
+* setToken과 setMemberName을 호출하여 쿠키에서 값을 꺼내와 state에 저장해준다.
+* 새로고침을 해도 token과 memberName은 쿠키에서 값을 꺼내오기 때문에 값이 초기화되지 않아서 상태를 유지한다.
+* 로그아웃 시에는 state와 쿠키 값을 삭제하고 login 페이지로 이동한다.
+
+## 비로그인 시 url로 접근 제한
+권한이 없는 경우에도 url로 페이지에 접근하는 것을 막기 위해 router에서 설정할 수 있다.
+
+```javascript
+// router/index.js
+import Vue from "vue";
+import VueRouter from "vue-router";
+import store from "@/store/index";
+
+Vue.use(VueRouter);
+
+const routes = [
+  {
+    path: "/",
+    redirect: "/login"
+  },
+  {
+    path: "/login",
+    name: "Login",
+    component: () => import("@/views/Login.vue")
+  },
+  {
+    path: "/signup",
+    name: "Signup",
+    component: () => import("@/views/Signup.vue")
+  },
+  {
+    path: "/main",
+    name: "Main",
+    component: () => import("@/views/Main.vue"),
+    meta: { auth: true }
+  }
+];
+
+const router = new VueRouter({
+  mode: "history",
+  base: process.env.BASE_URL,
+  routes
+});
+
+router.beforeEach((to, from, next) => {
+  if (to.meta.auth && !store.getters.isLogin) {
+    alert("로그인 페이지로 이동합니다.");
+    next("/login");
+    return;
+  }
+  next();
+});
+
+export default router;
+```
+* beforeEach는 라우터 네비게이션 가드로 라우팅이 발생하기 전에 실행되는 코드이다.
+* to는 이동하려는 페이지, from은 현재 페이지, next는 다음 페이지로 이동할 수 있도록 호출하는 API이다.
+* 접근 권한이 필요한 페이지에 meta 속성을 사용해 정의한다.
+* meta 속성과 실제로 권한이 있는지를 확인해서 접근 권한이 필요한 페이지에 권한이 없다면 alert창으로 오류 메시지를 띄우고 login 창으로 이동하는 코드이다.
