--- a/_posts/2021-04-27-0426-0502.md
+++ b/_posts/2021-04-27-0426-0502.md
@@ -161,3 +161,42 @@ export default {
 </script>
 ```
 * 부모 컴포넌트로부터 메소드를 실행시켜서 vuex의 action 메소드를 통해 title과 content를 전달해서 게시글을 추가하는 기능을 완성시켰다.
+
+## 0427
+# CORS 문제 해결
+
+클라이언트 단에서 Authorization 헤더에 토큰 값을 넣어 보내는 구현 방식을 선택하였는데, 계속되는 CORS 문제로 인해서 정상 작동 하지 않았다.
+
+```java
+// WebConfiguration.java
+@Configuration
+public class WebConfiguration implements WebMvcConfigurer {
+  @Override
+  public void addInterceptors(InterceptorRegistry registry) {
+      registry.addInterceptor(baseHandlerInterceptor());
+      registry.addInterceptor(bearerAuthInterceptor())
+              .excludePathPatterns("/members/*");
+  }
+
+  @Override
+  public void addCorsMappings(CorsRegistry registry) {
+      // 모든 uri에 대해 http://localhost:3000의 접근을 허용한다.
+      registry.addMapping("/**")
+              .allowedOrigins("http://localhost:3000")
+              .allowCredentials(true);
+  }
+}
+```
+* WebConfiguration은 CORS와 관련된 로직 및 인터셉터를 관리하는 클래스인데, 기본적인 설정을 해뒀음에도 불구하고 CORS 문제가 발생하는 데는 특별한 이유가 있다는 생각이 들었다.
+* bearerAuthInterceptor는 토큰과 관련된 로직을 담당하는 인터셉터 영역인데, 인증이 필요없는 /members로 호출하는 api만 제외시키고 모두 이 영역을 거쳐야 한다.
+* 검색을 하면서 여러 글들을 읽어보고 시도해봤지만 되지 않는 것으로 봐서는 bearerAuthInterceptor를 거치는 내부 로직에서 문제가 있다고 판단하였다.
+* OPTIONS 예비 메소드가 넘어올 때도 인터셉터를 거쳐서 에러가 발생하는 것이 아닐까? 하고 생각하여 OPTIONS 메서드의 경우 true 값을 반환하도록 설정하니 제대로 동작하였다.
+
+```java
+public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
+  if (request.getMethod().equals("OPTIONS")) {
+      log.info("option 메서드인 경우, true 반환");
+      return true;
+  }
+}
+```
