--- a/_posts/2021-04-27-0426-0502.md
+++ b/_posts/2021-04-27-0426-0502.md
@@ -200,3 +200,120 @@ public boolean preHandle(HttpServletRequest request, HttpServletResponse respons
   }
 }
 ```
+
+## 0428
+# 페이징 처리
+로그인을 하면 첫 화면에 존재하는 게시글의 목록이 나타나는데, 10개 씩 묶어서 페이징 처리를 하기 위한 작업을 했다.
+
+## Pagination.vue 작성
+페이징 처리를 할 때 사용할 부분을 컴포넌트화 했다.
+
+```vue
+<template>
+  <div class="pagiNation">
+    <ul>
+      <li>
+        <a v-if="prev" @click="changeLink(startPageIndex - 1)">prev</a>
+      </li>
+      <li v-for="index in endPageIndex - startPageIndex + 1" :key="index">
+        <a
+          :class="{ on: startPageIndex + index - 1 == currentPageNo }"
+          @click="changePage(index)"
+        >
+          {{ startPageIndex + index - 1 }}
+        </a>
+      </li>
+      <li>
+        <a v-if="next" @click="changeLink(endPageIndex + 1)">next</a>
+      </li>
+    </ul>
+  </div>
+</template>
+
+<script>
+export default {
+  props: ["currentPageNo", "totalCnt", "recordsPerPage", "pagePerLink"], // totalCnt: 총 리스트 개수, recordsPerPage: 한 페이지당 리스트 개수, pagePerLink: 링크당 페이지 개수
+  data() {
+    return {
+      pageCount: 0, //페이지 개수
+      startPageIndex: 0, //링크에서 페이지 시작 인덱스
+      endPageIndex: 0, //링크에서 페이지 마지막 인덱스
+      prev: false,
+      next: false
+    };
+  },
+  methods: {
+    initUI() {
+      this.pageCount = Math.ceil(this.totalCnt / this.recordsPerPage);
+
+      if (this.currentPageNo % this.pagePerLink == 0) {
+        this.startPageIndex =
+          (this.currentPageNo / this.pagePerLink - 1) * this.pagePerLink + 1;
+      } else {
+        this.startPageIndex =
+          Math.floor(this.currentPageNo / this.pagePerLink) * this.pagePerLink +
+          1;
+      }
+
+      if (this.currentPageNo % this.pagePerLink == 0) {
+        this.endPageIndex =
+          (this.currentPageNo / this.pagePerLink - 1) * this.pagePerLink +
+          this.pagePerLink;
+      } else {
+        this.endPageIndex =
+          Math.floor(this.currentPageNo / this.pagePerLink) * this.pagePerLink +
+          this.pagePerLink;
+      }
+
+      if (this.currentPageNo <= this.pagePerLink) {
+        this.prev = false;
+      } else {
+        this.prev = true;
+      }
+
+      if (this.endPageIndex >= this.pageCount) {
+        this.endPageIndex = this.pageCount;
+        this.next = false;
+      } else {
+        this.next = true;
+      }
+    },
+    changePage(index) {
+      let selectedPage = this.startPageIndex + index - 1;
+      this.$emit("update", selectedPage);
+    },
+    changeLink(index) {
+      this.$emit("update", index);
+    }
+  },
+  watch: {
+    currentPageNo: function() {
+      this.initUI();
+    },
+    totalCnt: function() {
+      this.initUI();
+    },
+    recordsPerPage: function() {
+      this.initUI();
+    },
+    pagePerLink: function() {
+      this.initUI();
+    }
+  },
+  created() {
+    if (this.currentPageNo !== undefined) {
+      this.initUI();
+    }
+  }
+};
+</script>
+
+<style scoped src="../../assets/css/board/pagination.css"></style>
+```
+
+
+* 기본적으로 내가 구성한 Pagination은 한 링크당 5페이지로 구성되어 있고, 한 페이지당 10개의 게시글로 구성되어 있다.
+* next 버튼을 누르면 다음 링크로 넘어가서 첫 페이지를 보여주고, prev 버튼을 누르면 이전 링크로 넘어가서 마지막 페이지를 보여주게 설정하였다. 다만 각 버튼은 다음이나 이전 링크에 페이지가 존재해야지만 활성화 된다.
+* Pagination은 부모 컴포넌트로부터 현재 페이지 번호, 총 게시글 수, 링크당 페이지 수, 페이지당 게시글 수 데이터를 넘겨받아서 그 값을 토대로 initUI 메소드를 실행시켜 값을 계산한다.
+* 다른 페이지를 클릭하거나 링크를 이동하면 인덱스를 이벤트로 넘겨서 부모 컴포넌트의 메소드를 실행시킨다.
+* 부모 컴포넌트에서 메소드를 실행시켜 해당 페이지에 대한 결과를 반환하면, watch 속성을 통해 initUI 메소드를 다시 실행시켜 Pagination이 재정의된다.
