--- a/_posts/2021-04-27-0426-0502.md
+++ b/_posts/2021-04-27-0426-0502.md
@@ -317,3 +317,137 @@ export default {
 * Pagination은 부모 컴포넌트로부터 현재 페이지 번호, 총 게시글 수, 링크당 페이지 수, 페이지당 게시글 수 데이터를 넘겨받아서 그 값을 토대로 initUI 메소드를 실행시켜 값을 계산한다.
 * 다른 페이지를 클릭하거나 링크를 이동하면 인덱스를 이벤트로 넘겨서 부모 컴포넌트의 메소드를 실행시킨다.
 * 부모 컴포넌트에서 메소드를 실행시켜 해당 페이지에 대한 결과를 반환하면, watch 속성을 통해 initUI 메소드를 다시 실행시켜 Pagination이 재정의된다.
+
+## 0429
+# 검색 기능과 페이징 처리
+작성했던 Pagination을 이용하여 검색 기능과 검색을 통한 결과를 페이징 처리하는 기능을 구현하였다.  
+기본적으로 로그인하면 전체 결과에 대한 리스트를 보여주고, 검색창에 검색 시에만 해당하는 검색어가 게시글 제목이나 내용에 속해있는 결과를 페이징 처리하여 반환해주는 형태로 구현하였다.
+
+```vue
+<template>
+  <div class="content_mainBox">
+    <div class="content_search">
+      <input
+        type="text"
+        class="login_id"
+        placeholder="검색어를 입력해주세요"
+        v-model="searchWord"
+        @keyup.enter="getBoardListMethod"
+      />
+      <button class="searchBtn" title="search" @click="getBoardListMethod">
+        검색
+      </button>
+    </div>
+
+    <div class="result_total">검색결과 {{ boardList.totalCnt }}건</div>
+
+    <div class="content_tableArea">
+      <table class="content_mainTable">
+        <colgroup>
+          <col style="width: 10%;" />
+          <col />
+          <col style="width: 15%;" />
+          <col style="width: 15%;" />
+          <col style="width: 10%;" />
+        </colgroup>
+        <tr>
+          <th>No</th>
+          <th>제목</th>
+          <th>작성자</th>
+          <th>작성일</th>
+          <th>좋아요</th>
+        </tr>
+        <tr v-for="(board, index) in boardList.list" v-bind:key="index">
+          <td>{{ board.boardNo }}</td>
+          <td>
+            <a href="">{{ board.title }}</a>
+          </td>
+          <td>{{ board.memberName }}</td>
+          <td>{{ board.regDate }}</td>
+          <td>{{ board.likeCnt }}</td>
+        </tr>
+      </table>
+    </div>
+
+    <div class="no_result" v-if="boardList.totalCnt == 0">
+      검색 결과가 없습니다.
+    </div>
+    <pagination
+      @update="changePage"
+      v-bind:currentPageNo="boardList.currentPageNo"
+      v-bind:totalCnt="boardList.totalCnt"
+      v-bind:recordsPerPage="boardList.recordsPerPage"
+      v-bind:pagePerLink="5"
+    >
+    </pagination>
+  </div>
+</template>
+
+<script>
+import { mapActions } from "vuex";
+import Pagination from "./Pagination";
+
+export default {
+  data() {
+    return {
+      boardList: {},
+      currentPageNo: 1,
+      searchWord: ""
+    };
+  },
+  methods: {
+    ...mapActions(["getBoardList", "getBoardSearchList"]),
+    async getBoardListMethod() {
+      try {
+        const param = {
+          searchWord: this.searchWord.trim(),
+          currentPageNo: 1
+        };
+
+        if (param.searchWord === "") {
+          this.boardList = await this.getBoardList(param);
+          console.log(this.boardList);
+        } else {
+          this.boardList = await this.getBoardSearchList(param);
+          console.log(this.boardList);
+        }
+      } catch (error) {
+        console.log(error.response);
+      }
+    },
+    async changePage(pageNo) {
+      try {
+        this.currentPageNo = pageNo;
+
+        const param = {
+          searchWord: this.searchWord,
+          currentPageNo: this.currentPageNo
+        };
+
+        if (param.searchWord === "") {
+          this.boardList = await this.getBoardList(param);
+          console.log(this.boardList);
+        } else {
+          this.boardList = await this.getBoardSearchList(param);
+          console.log(this.boardList);
+        }
+      } catch (error) {
+        console.log(error.response);
+      }
+    }
+  },
+  created() {
+    this.getBoardListMethod();
+  },
+  components: {
+    Pagination
+  }
+};
+</script>
+
+<style scoped src="../../assets/css/board/boardList.css"></style>
+```
+* 검색어를 입력하고 검색 버튼을 누르거나 엔터키를 누르면 getBoardListMethod를 실행시킨다.
+* 검색을 한 경우에는 기본적으로 첫 번째 페이지를 보여줘야 하기 때문에 현재 페이지 번호를 1번으로 고정해서 param으로 사용하였고, 검색어가 없을 경우에는 전체 결과를 반환하는 getBoardList를, 검색어가 있을 경우에는 검색어로 결과를 찾는 getBoardSearchList 메소드를 실행해서 결과를 boardList 데이터에 넣었다.
+* 전체 결과이든, 검색 결과이든 페이지를 전환하면 Pagination에서 발생한 이벤트와 payload로 전달된 인덱스를 이용해서 해당 페이지에 있는 게시글 리스트를 결과로 반환한다.
+* 검색창 상단에는 정상적으로 검색이 실행되었는지 확인을 하기 위해 검색 결과 수를 표시하고, 검색 결과의 개수가 0일 경우 검색 결과가 없다는 메시지를 화면에 보여주도록 구현하였다.
