--- a/_posts/2021-04-27-0426-0502.md
+++ b/_posts/2021-04-27-0426-0502.md
@@ -451,3 +451,39 @@ export default {
 * 검색을 한 경우에는 기본적으로 첫 번째 페이지를 보여줘야 하기 때문에 현재 페이지 번호를 1번으로 고정해서 param으로 사용하였고, 검색어가 없을 경우에는 전체 결과를 반환하는 getBoardList를, 검색어가 있을 경우에는 검색어로 결과를 찾는 getBoardSearchList 메소드를 실행해서 결과를 boardList 데이터에 넣었다.
 * 전체 결과이든, 검색 결과이든 페이지를 전환하면 Pagination에서 발생한 이벤트와 payload로 전달된 인덱스를 이용해서 해당 페이지에 있는 게시글 리스트를 결과로 반환한다.
 * 검색창 상단에는 정상적으로 검색이 실행되었는지 확인을 하기 위해 검색 결과 수를 표시하고, 검색 결과의 개수가 0일 경우 검색 결과가 없다는 메시지를 화면에 보여주도록 구현하였다.
+
+## 0430
+# 게시글 세부 정보 기능
+게시글을 클릭하였을 때, 해당 게시물의 세부 정보를 불러와서 보여주고자 했다.  
+먼저 클릭했을 때 라우팅을 설정해야 하는데 이번에는 다른 페이지들과는 다르게 게시물 번호를 url에 포함하여 라우팅하고 싶었다.  
+이를 위해서 Dynamic Route Matching 기술을 사용했다.
+
+## Dynamic Route Matching
+* 라우터에 path를 정의할 때 동적 세그먼트는 콜론 :으로 표시된다.
+* 경로가 일치하면, 동적 세그먼트의 값은 this.$route.params로 모든 컴포넌트에서 사용 가능해진다.
+
+```javascript
+// /router/index.js
+const routes = [
+  {
+    path: "/post/:boardNo",
+    name: "detail",
+    component: () => import("@/views/PostDetail.vue"),
+    meta: { auth: true }
+  }
+];
+```
+
+```vue
+<!-- PostContent.vue -->
+<script>
+export default {
+  data() {
+    return {
+      boardNo: this.$route.params.boardNo
+    };
+  }
+};
+</script>
+```
+* 예를 들어, /post/123 url로 접근하게 되면 해당 페이지의 데이터로 boardNo는 123 값이 저장되어 있다.
