--- a/_posts/2021-04-27-0426-0502.md
+++ b/_posts/2021-04-27-0426-0502.md
@@ -487,3 +487,96 @@ export default {
 </script>
 ```
 * 예를 들어, /post/123 url로 접근하게 되면 해당 페이지의 데이터로 boardNo는 123 값이 저장되어 있다.
+
+## 0501
+게시글 상세 내용 확인 기능을 작성하고, 그에 맞게 화면을 디자인 했다.
+
+```vue
+<template>
+  <div class="content_mainBox">
+    <div class="info_area">
+      <span class="title">{{ boardInfo.title }}</span>
+      <div class="sub_info">
+        <span class="member_name">by {{ boardInfo.memberName }}</span>
+        <span class="date">{{ boardInfo.regDate }}</span>
+      </div>
+    </div>
+    <hr />
+
+    <div class="content_mainCont">
+      <div class="content">
+        {{ boardInfo.content }}
+      </div>
+      <div class="like">
+        <button>좋아요</button>
+        좋아요 {{ boardInfo.likeCnt }}
+      </div>
+    </div>
+    <hr />
+
+    <div class="content_reply">
+      <div class="content_replyBefore">
+        <table class="content_mainTable02">
+          <colgroup>
+            <col style="width: 10%;" />
+            <col />
+            <col style="width: 10%;" />
+          </colgroup>
+          <tr>
+            <td><!--이미지--></td>
+            <td><input type="text" class="reply" /></td>
+            <td><button class="btn_basic">댓글 입력</button></td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="content_replyAfter">
+        <table class="content_mainTable02">
+          <colgroup>
+            <col style="width: 10%;" />
+            <col />
+            <col style="width: 10%;" />
+          </colgroup>
+          <tr>
+            <td><!--이미지--></td>
+            <td><!--입력된 내용--></td>
+            <td><button class="btn_basic">삭제</button></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+</template>
+
+<script>
+import { mapActions } from "vuex";
+
+export default {
+  data() {
+    return {
+      boardNo: this.$route.params.boardNo,
+      boardInfo: {}
+    };
+  },
+  methods: {
+    ...mapActions(["getBoardDetail"]),
+    async getBoardDetailMethod() {
+      try {
+        this.boardInfo = await this.getBoardDetail(this.boardNo);
+        console.log(this.boardInfo);
+      } catch (error) {
+        console.log(error.response);
+      }
+    }
+  },
+  created() {
+    this.getBoardDetailMethod();
+  }
+};
+</script>
+
+<style scoped src="../../assets/css/post/content.css"></style>
+```
+
+* 동적 라우팅을 통해 받은 파라미터를 api를 호출할 때 사용할 변수로 사용했다.
+* 결과 값으로 받아온 boardInfo의 속성들을 화면을 나타내는 데 적절하게 사용해서 구현하였다.
